Laid out some HTML/CSS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Simon memory game</title>
 </head>
 <body>
+    <header>
+        <h1>Simon Says</h1>
+        <button class="tutorial">
+            <a href="tutorial.html">Tutorial</a>
+        </button>
+        <h3>Score: </h3>
+        <h3>0</h3>
+    </header>
+    <div class="quadrants">
+        <div class="quadrant" id="quadrant1"></div>
+        <div class="quadrant" id="quadrant2"></div>
+        <div class="quadrant" id="quadrant3"></div>
+        <div class="quadrant" id="quadrant4"></div>
+    </div>
+    <footer>
+        <button class="start">Start</button>
+        <button class="quit">Quit</button>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
