Finished basic CSS and started on script

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simon memory game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -16,10 +17,10 @@
         <h3>0</h3>
     </header>
     <div class="quadrants">
-        <div class="quadrant" id="quadrant1"></div>
-        <div class="quadrant" id="quadrant2"></div>
-        <div class="quadrant" id="quadrant3"></div>
-        <div class="quadrant" id="quadrant4"></div>
+        <div class="quadrant quadrant1" ></div>
+        <div class="quadrant quadrant2" ></div>
+        <div class="quadrant quadrant3" ></div>
+        <div class="quadrant quadrant4" ></div>
     </div>
     <footer>
         <button class="start">Start</button>
