Nearly completed game logic quadrantIterator still not working quite right

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             <a href="tutorial.html">Tutorial</a>
         </button>
         <h3>Score: </h3>
-        <h3>0</h3>
+        <h3 class='score'>0</h3>
     </header>
+    <h1 class="loss">You lose!!!!</h1>
     <div class="quadrants">
         <div class="quadrant quadrant1" ></div>
         <div class="quadrant quadrant2" ></div>
