Spruced up CSS and removed logs

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header style="text-align: center;">
         <h1>Simon Says</h1>
-        <button class="tutorial">
-            <a href="tutorial.html">Tutorial</a>
+        <button class="tutorial-btn">
+            Tutorial
         </button>
+        <p class="tutorial">To begin click 'Start'. You will need to memorize each square and the order in which they are highlighted, then click the squares in that order.</p>
         <h3>Score: </h3>
         <h3 class='score'>0</h3>
     </header>
@@ -23,7 +24,7 @@
         <div class="quadrant quadrant3" ></div>
         <div class="quadrant quadrant4" ></div>
     </div>
-    <footer>
+    <footer style="text-align: center;">
         <button class="start">Start</button>
         <button class="quit">Quit</button>
     </footer>
