--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Simon memory game</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header style="text-align: center;">
-        <h1>Simon Says</h1>
-        <button class="tutorial-btn">
-            Tutorial
-        </button>
-        <p class="tutorial">To begin click 'Start'. You will need to memorize each square and the order in which they are highlighted, then click the squares in that order.</p>
-        <h3>Score: </h3>
-        <h3 class='score'>0</h3>
-    </header>
-    <h1 class="loss">You lose!!!!</h1>
-    <div class="quadrants">
-        <div class="quadrant quadrant1" ></div>
-        <div class="quadrant quadrant2" ></div>
-        <div class="quadrant quadrant3" ></div>
-        <div class="quadrant quadrant4" ></div>
-    </div>
-    <footer style="text-align: center;">
-        <button class="start">Start</button>
-        <button class="quit">Quit</button>
-    </footer>
-    <script src="script.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Simon memory game</title>
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<body>
+		<header style="text-align: center;">
+			<h1>Simon Says</h1>
+			<button class="tutorial-btn">
+				Tutorial
+			</button>
+			<p class="tutorial">
+				To begin click 'Start'. You will need to memorize each square and the
+				order in which they are highlighted, then click the squares in that
+				order.
+			</p>
+			<h3>Score:</h3>
+			<h3 class="score">0</h3>
+		</header>
+		<main>
+			<h1 class="loss">You lose!</h1>
+			<div class="quadrants">
+				<div class="quadrant quadrant1"></div>
+				<div class="quadrant quadrant2"></div>
+				<div class="quadrant quadrant3"></div>
+				<div class="quadrant quadrant4"></div>
+			</div>
+		</main>
+		<footer style="text-align: center;">
+			<button class="start">Start</button>
+			<button class="quit">Quit</button>
+		</footer>
+		<script src="script.js"></script>
+	</body>
 </html>
